# BA-CheckThat2024

./: .gitignore  CT24_checkworthy_english_dev-test_augmented.tsv  CT24_checkworthy_english_dev-test_augmented_shuffled.tsv  README.md  back_translation_marianT.py  dev-test1.tsv  dev-test1_augmented.tsv  dev-test1_augmentedX4.tsv  dev-test1_augmentedX4_shuffled.tsv  dev-test1_augmented_shuffled.tsv  paraphrase_test.py  pyproject.toml  requirements.txt
checkthat2023/: ask_gpt.py  combine_kernels.py  electra_kernel.py  finetune.py  finetune_multi.py  finetune_text.py  gptcheck.py  img_kernel_untrained.py  main.py  scrap.py  token_alignment_untrained.py
checkthat2023/evaluation/: __init__.py  evaluation.py
checkthat2023/gpt/: ask_gpt.py  gpt_kernel.py
checkthat2023/kernel_stuff/: img_sim.py  kernel.py  tfidf.py  token_alignment.py
checkthat2023/paper/: experiments.py  plots.py  presentation.py
checkthat2023/preprocessing/: text.py
checkthat2024/: README.md  add_sample_length_as_label.py  calibration.py  combination_ensemble.py  dataset_utils.py  ensemble.py  eval.py  finetune_text.py  finetune_text.py.save  paraphrase.py  paraphraser_humarin.py  requirements.txt  sample_length.py  submission.py  task1a.py  update_wandb_run.py  wandb-metadata.json
config/: config.dev.json
data_f_all_paraphrased_balanced/: CT24_checkworthy_english_train.tsv
datasets/: task1a.py  task1b.py
evaluation/: __init__.py  evaluation.py
preprocessing/: text.py
submission/: subtask1A_en.tsv
svm_baseline/: task1a.py  task1b.py
tasks/: task1a.py  task1b.py
(+68 files in other folders)
