[tool.poetry]
name = "checkthat2023"
version = "0.1.0"
description = ""
authors = ["vode <vode@zhaw.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
Pillow = "^9.5.0"
numpy = "^1.24.3"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
emoji = "^2.2.0"
nltk = "^3.8.1"
urlextract = "^1.8.0"
torch = "^2.0.0"
transformers = "^4.39.3"
POT = "^0.9.0"
tqdm = "^4.65.0"
cvxopt = "1.3.0"
mklpy = "^0.6"
lmql = "^0.0.6.1"
matplotlib = "^3.7.1"
pyqt6 = "^6.5.0"
flair = "^0.12.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
